--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -814,7 +814,10 @@ Resources:
                   !Sub arn:aws:iam::${AWS::AccountId}:role/aws-reserved/sso.amazonaws.com/*/AWSReservedSSO_ApprovedServiceSupport*
       ManagedPolicyArns:
         - !Ref ManualF2fPendingResetFunctionManagedPolicy
-      PermissionsBoundary: !Sub "${PermissionsBoundary}"
+      PermissionsBoundary: !If
+        - UsePermissionsBoundary
+        - !Ref PermissionsBoundary
+        - !Ref AWS::NoValue
       MaxSessionDuration: 43200
       Path: /runbooks/
 
