PYIC-8464: update new identity journey map descriptions

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p1-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p1-identity.yaml
@@ -1,7 +1,7 @@
 name: New P1 Identity
 description: >-
-  The routes a user can take to prove their identity to a low
-  confidence level (P1).
+  The routes a user can take to prove their identity to at least
+  a low confidence level (P1).
 
 states:
   # Entry points
