PYIC-7877 Change cimit config to yaml

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -65,15 +65,14 @@ core:
     componentId: "https://cimit.stubs.account.gov.uk"
     signingKey: "{\"kty\":\"EC\",\"crv\":\"P-256\",\"x\":\"E9ZzuOoqcVU4pVB9rpmTzezjyOPRlOmPGJHKi8RSlIM\",\"y\":\"KlTMZthHZUkYz5AleTQ8jff0TJiS3q2OB9L5Fw4xA04\"}"
     # Test CIMIT config
-    config: '{
-      "NEEDS-ENHANCED-VERIFICATION":[
-        {"event":"/journey/enhanced-verification"}
-      ],
-      "NEEDS-ALTERNATE-DOC":[
-        {"event":"/journey/alternate-doc-invalid-dl","document":"drivingPermit"},
-        {"event":"/journey/alternate-doc-invalid-passport","document":"passport"}
-      ]
-    }'
+    config:
+      NEEDS-ENHANCED-VERIFICATION:
+        - event: "/journey/enhanced-verification"
+      NEEDS-ALTERNATE-DOC:
+        - event: /journey/alternate-doc-invalid-dl
+          document: drivingPermit
+        - event: /journey/alternate-doc-invalid-passport
+          document: passport
     apiBaseUrl: "https://cimit-api.stubs.account.gov.uk"
   evcs:
     applicationUrl: "https://evcs.stubs.account.gov.uk"
