PYIC-7877 Remove unwanted quotas

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -67,7 +67,7 @@ core:
     # Test CIMIT config
     config:
       NEEDS-ENHANCED-VERIFICATION:
-        - event: "/journey/enhanced-verification"
+        - event: /journey/enhanced-verification
       NEEDS-ALTERNATE-DOC:
         - event: /journey/alternate-doc-invalid-dl
           document: drivingPermit
