--- a/libs/common-services/src/test/resources/test-parameters.yaml
+++ b/libs/common-services/src/test/resources/test-parameters.yaml
@@ -1,19 +1,17 @@
 ---
 core:
   self:
-    componentId: "test-component-id"
+    componentId: test-component-id
   credentialIssuers:
     address:
       connections:
-        test: '{
-          "componentId":"test-issuer"
-        }'
+        test:
+          componentId: test-issuer
     dcmaw:
       connections:
-        test: '{
-          "componentId":"alternate-issuer"
-        }'
+        test:
+          componentId: alternate-issuer
   features:
     testFeature:
       self:
-        componentId: "alternate-component-id"
+        componentId: alternate-component-id
