PYIC-8457: remove conflicting autoinstrumentation

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -63,6 +63,7 @@ Globals:
         OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED: false
         OTEL_INSTRUMENTATION_AWS_LAMBDA_ENABLED: true
         OTEL_INSTRUMENTATION_AWS_SDK_ENABLED: true
+        OTEL_INSTRUMENTATION_JAVA_HTTP_CLIENT_ENABLED: true
         OPENTELEMETRY_COLLECTOR_CONFIG_URI: '/var/task/collector.yaml'
         DT_CONNECTION_AUTH_TOKEN_OTLP: !If
           - IsBuild
