PYIC-7877 Add configFormat variable to config.

--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -3,6 +3,7 @@
 ---
 core:
   self:
+    configFormat: "yaml"
     componentId: "https://identity.local.account.gov.uk"
     audienceForClients: "https://identity.local.account.gov.uk"
     jwtTtlSeconds: 3600
