PYIC-7878: Add Config class

--- a/libs/common-services/src/test/resources/test-parameters.yaml
+++ b/libs/common-services/src/test/resources/test-parameters.yaml
@@ -4,6 +4,7 @@ core:
     configFormat: "yaml"
     componentId: "https://identity.local.account.gov.uk"
     signingKeyId: "some-signin-id"
+    sisSigningKeyId: "dummy-value"
     audienceForClients: "https://identity.local.account.gov.uk"
     jwtTtlSeconds: 3600
     maxAllowedAuthClientTtl: 3600
@@ -24,6 +25,31 @@ core:
       P1: 5
       P2: 10
       P3: 10
+    ciScoringConfig:
+      - ci: "NON-BREACHING"
+        detectedScore: 2
+        checkedScore: -2
+        returnCode: "non-breaching"
+      - ci: "BREACHING"
+        detectedScore: 20
+        checkedScore: -20
+        returnCode: "breaching"
+      - ci: "BREACHING-P1-ONLY"
+        detectedScore: 7
+        checkedScore: -7
+        returnCode: "breaching-p1-only"
+      - ci: "NEEDS-ENHANCED-VERIFICATION"
+        detectedScore: 20
+        checkedScore: -20
+        returnCode: "needs-enhanced-verification"
+      - ci: "NEEDS-ALTERNATE-DOC"
+        detectedScore: 20
+        checkedScore: -20
+        returnCode: "needs-alternate-doc"
+      - ci: "ALWAYS-REQUIRED"
+        detectedScore: 1
+        checkedScore: -1
+        returnCode: "always-required"
     returnCodes:
       alwaysRequired: always-required
       nonCiBreachingP0: non-ci-breaching
