PYIC-8570: update cloudformation template to allow ProcessCandidateIdentity lambda to use new sis signing key

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -2994,6 +2994,12 @@ Resources:
                 - 'kms:sign'
               Resource:
                 - !ImportValue SigningKeyArn
+            - Sid: kmsSisSigningKeyPermission
+              Effect: Allow
+              Action:
+                - 'kms:sign'
+              Resource:
+                - !ImportValue StoredIdentitySigningKeyArn
         - KMSDecryptPolicy:
             KeyId: !Ref DynamoDBKmsKey
         - DynamoDBCrudPolicy:
