--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include "lambdas",
 		"lambdas:process-mobile-app-callback",
 		"lambdas:check-mobile-app-vc-receipt",
 		"lambdas:manual-f2f-pending-reset",
+		"lambdas:validate-appconfig",
 		"libs:ais-service",
 		"libs:audit-service",
 		"libs:cimit-service",
