--- a/journey-map/package.json
+++ b/journey-map/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.11.0",
     "@types/express": "^5.0.0",
+    "dotenv": "17.2.1",
     "esbuild": "^0.25.3",
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
