PYIC-7895: Create test-data library

--- a/settings.gradle
+++ b/settings.gradle
@@ -39,6 +39,7 @@ include "lambdas",
 		"libs:cri-storing-service",
 		"libs:evcs-service",
 		"libs:gpg45-evaluator",
+		"libs:test-data",
 		"libs:test-helpers",
 		"libs:user-identity-service",
 		"libs:verifiable-credentials",
