PYIC-7895: Move references for test data to new dedicated library

--- a/libs/common-services/build.gradle
+++ b/libs/common-services/build.gradle
@@ -30,7 +30,8 @@ dependencies {
 	testImplementation libs.junitJupiter,
 			libs.mockitoJunit,
 			libs.systemStubs,
-			libs.hamcrest
+			libs.hamcrest,
+			project(path: ':libs:test-data')
 
 	testRuntimeOnly libs.junitPlatform
 
