--- a/lambdas/validate-appconfig/build.gradle
+++ b/lambdas/validate-appconfig/build.gradle
@@ -12,7 +12,8 @@ dependencies {
 
 	testImplementation libs.hamcrest,
 			libs.junitJupiter,
-			libs.mockitoJunit
+			libs.mockitoJunit,
+			project(":libs:test-data")
 	testRuntimeOnly libs.junitPlatform
 }
 
